--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3537,9 +3537,10 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: #ffffff;
+  color: black;
+  /*background-color: #ffffff;
   border: 1px solid #cccccc;
-  border: 1px solid #e7e7e7;
+  border: 1px solid #e7e7e7;*/
   border-radius: 4px;
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
@@ -3561,8 +3562,9 @@ tbody.collapse.in {
   padding: 3px 20px;
   clear: both;
   font-weight: normal;
+  font-size: large;
   line-height: 1.42857143;
-  color: #999999;
+  color: black;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
@@ -4501,7 +4503,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default {
   background-color: #f8f8f8;
-  border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
   color: #333333;
@@ -4515,7 +4516,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #555555;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #999999;
+  color: black;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
