--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -42,7 +42,7 @@ li > #sub{
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 173px;
 }
 
 #page-content-wrapper {
@@ -53,7 +53,6 @@ li > #sub{
 
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
-    margin-right: -250px;
 }
 
 /* Sidebar Styles */
@@ -61,7 +60,7 @@ li > #sub{
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 173px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -114,7 +113,8 @@ li > #sub{
     }
 
     #sidebar-wrapper {
-        width: 250px;
+        width: 173px;
+        opacity: .8;
     }
 
     #wrapper.toggled #sidebar-wrapper {
